--- a/www/index.html
+++ b/www/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
-
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+		<title></title>
+		<link href="css/ionic.app.css" rel="stylesheet">
+    <!-- compiled css output -->
+		<!-- ionic/angularjs js -->
+		<script src="lib/ionic/js/ionic.bundle.js"></script>
+		<script src="lib/ngCordova/dist/ng-cordova.js"></script>
+		<script src="lib/ionic-service-core/ionic-core.js"></script>
+		<script src="lib/ionic-service-push/ionic-push.js"></script>
+		<script src="lib/ionic-service-deploy/ionic-deploy.js"></script>
+		<script src="lib/ionic-service-analytics/ionic-analytics.js"></script>
+		<script src="lib/imgcache.js/js/imgcache.js"></script>
+		<script src="lib/angular-imgcache.js/angular-imgcache.js"></script>
+		<script src="lib/moment.min.js"></script>
+		<script src="lib/openfb.js"></script>
+		<script src="lib/ngopenfb.js"></script>
+		<!-- your app's js -->
+		<script src="js/app.js"></script>
+		<script src="js/services.js"></script>
+		<script src="js/controllers.js"></script>
+		<script src="js/utils.js"></script>
+	</head>
+	<body ng-app="greyback">
+		<ion-nav-view></ion-nav-view>
+	</body>
 </html>
