--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 		<script src="lib/imgcache.js/js/imgcache.js"></script>
 		<script src="lib/angular-imgcache.js/angular-imgcache.js"></script>
 		<script src="lib/angular-messages/angular-messages.min.js"></script>
-<!--		<script src="lib/jr-crop.min.js"></script>-->
+		<script src="lib/jr-crop.min.js"></script>
 		<script src="lib/moment.min.js"></script>
 		<script src="lib/openfb.js"></script>
 		<script src="lib/ngopenfb.js"></script>
