--- a/www/lib/ionic-datepicker/src/ionic-datepicker-popup.html
+++ b/www/lib/ionic-datepicker/src/ionic-datepicker-popup.html
@@ -1,16 +1,16 @@
 <div class="ionic-datepicker">
   <div class="selected_date_full">{{selectedDateFull | date:"dd-MM-yyyy"}}</div>
   <div class="row no_padding">
-    <div class="col col-10 left_arrow">
-      <button class="button-clear" ng-click="prevMonth()"
-              ng-class="{'pointer_events_none':(enableDatesFrom.isSet && enableDatesFrom.epoch > currentMonthFirstDayEpoch),
-              'color_blue':(enableDatesFrom.isSet && enableDatesFrom.epoch < currentMonthFirstDayEpoch) || !enableDatesFrom.isSet}">
+    <div class="col col-10 left_arrow" ng-click="prevMonth()"
+         ng-class="{'pointer_events_none':(enableDatesFrom.isSet && enableDatesFrom.epoch > currentMonthFirstDayEpoch)}">
+      <button class="button-clear"
+              ng-class="{'color_blue':((enableDatesFrom.isSet && enableDatesFrom.epoch < currentMonthFirstDayEpoch) || (!enableDatesFrom.isSet))}">
         <i class="icon ion-chevron-left"></i>
       </button>
     </div>
     <div class="col col-80 drop_down no_padding">
       <div class="row select_section">
-        <div class="col col-50">
+        <div class="col col-50 month_dropdown">
           <div class="list">
             <label class="item item-input item-select">
               <select ng-model="currentMonth" ng-change="monthChanged(currentMonth)" class="month_select">
@@ -21,7 +21,7 @@
             </label>
           </div>
         </div>
-        <div class="col col-50">
+        <div class="col col-50 year_dropdown">
           <div class="list">
             <label class="item item-input item-select">
               <select ng-model="currentYear" ng-change="yearChanged(currentYear)" class="year_select">
@@ -34,10 +34,10 @@
         </div>
       </div>
     </div>
-    <div class="col col-10 right_arrow">
-      <button class="button-clear" ng-click="nextMonth()"
-              ng-class="{'pointer_events_none':(enableDatesTo.isSet && enableDatesTo.epoch < currentMonthLastDayEpoch),
-              'color_blue':(enableDatesTo.isSet && enableDatesTo.epoch > currentMonthLastDayEpoch)}">
+    <div class="col col-10 right_arrow" ng-click="nextMonth()"
+         ng-class="{'pointer_events_none':(enableDatesTo.isSet && enableDatesTo.epoch < currentMonthLastDayEpoch)}">
+      <button class="button-clear"
+              ng-class="{'color_blue':((enableDatesTo.isSet && enableDatesTo.epoch > currentMonthLastDayEpoch) || (!enableDatesTo.isSet))}">
         <i class="icon ion-chevron-right"></i>
       </button>
     </div>
@@ -60,5 +60,7 @@
       </div>
     </div>
   </div>
-  <div class="error_msg padding-horizontal" ng-show="date_selection.submitted === true && date_selection.selected === false">{{errorMsgLabel}}</div>
+  <div class="error_msg padding-horizontal"
+       ng-show="date_selection.submitted === true && date_selection.selected === false">{{errorMsgLabel}}
+  </div>
 </div>
