--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+		<meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval'; img-src * 'self' data: 'unsafe-inline'">
 		<title></title>
 		<link href="css/ionic.app.css" rel="stylesheet">
     <!-- compiled css output -->
